--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.4-eap-77'
+    ext.kotlin_version = '1.1.4-2'
     ext.support_version = '25.3.1'
     ext.anko_version = '0.10.1'
     repositories {
