--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.4-2'
+    ext.kotlin_version = '1.2-M2'
     ext.support_version = '25.3.1'
     ext.anko_version = '0.10.1'
     repositories {
         jcenter()
         maven {
-            url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1'
+            url 'http://dl.bintray.com/kotlin/kotlin-eap-1.2'
         }
     }
     dependencies {
